--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "proxima-nova", sans-serif;
+  font-family: "raleway", sans-serif;
   font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
