--- a/public/sass/featured-posts/_featured-posts.scss
+++ b/public/sass/featured-posts/_featured-posts.scss
@@ -1,8 +1,12 @@
 //featured news item
 .featured-section {
   @extend %half-width;
-  background-color: $color-dark;
-  height: 100vh;
+  background-color: $color-accent;
+  padding: 24px 12px 12px 12px;
+  height: 75vh;
+  @media (min-width: 992px) {
+    height: 100vh;
+  }
 }
 
 // .featured-post-image {
@@ -16,11 +20,7 @@
 
 .featured-post-details {
   @extend %two-thirds;
-  position: absolute;
-  top: 24px;
-  left: 0;
   border-top: 2px solid $color-light;
-  border-bottom: 2px solid $color-accent;
   padding: 18px 0;
   color: white;
 }
@@ -37,11 +37,27 @@
 
 .featured-post__body {
   font-size: 1.6rem;
+  margin-bottom: 30px;
+  p {
+    color: $color-white;
+  }
 }
 
 .featured-post__link {
   text-transform: uppercase;
   font-size: 1.6rem;
+  margin-top: 48px;
+  color: $color-dark;
+  font-weight: 700;
+  background-color: $color-white;
+  padding: 6px;
+  transition: all 0.25s;
+  &:hover,
+  &:focus {
+    background-color: $color-dark;
+    color: $color-white;
+    text-decoration: none;
+  }
 }
 
 
@@ -49,4 +65,44 @@
 //list of news items
 .list-section {
   @extend %half-width;
+  padding-top: 24px;
+  height: auto;
+  overflow: auto;
+  background-color: $color-light-b;
+  @media(min-width: 992px) {
+    height: 100vh;
+    overflow-y: scroll;
+  }
+}
+
+.list-item {
+  position: relative;
+  transition: all 0.3s;
+  @extend .comment-card;
+  padding: 30px 15px !important;
+}
+
+.list-item__title {
+  margin-top: 0;
+  margin-bottom: 18px !important;
+  color: $color-accent;
+  @extend .comment-card__author;
+  @extend %text;
+}
+
+.list-item__link {
+  &:hover,
+  &:focus {
+    text-decoration: none;
+    .list-item {
+      background-color: darken($color-light-b, 7%);
+    }
+  }
+}
+
+.list-item__more {
+  color: $color-dark;
+  text-transform: uppercase;
+  font-weight: 500;
+  @extend %text--small;
 }
