--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -22,17 +22,16 @@
   <div class="comments-wrapper">
     <div class="comments__main">
       <h3 class="comments__title">Comments</h3>
-      <ul class="comments__list">
       <% if(post.comments.length > 0) { %>
-        <% var reversedComments = post.comments.reverse(); %>
-          <% reversedComments.forEach(function(comment){ %>
-          <li>
-            <article class="comment-card">
-              <p class="comment-card__author"><%- comment.author %></p>
-              <p class="comment-card__date"><%= moment(Date(comment.date)).format("MMM Do YY") %></p>
-              <p class="comment-card__body"><%- comment.body %></p>
-            </article>
-          </li>
+        <ul class="comments__list">
+          <% post.comments.forEach(function(comment){ %>
+            <li>
+              <article class="comment-card">
+                <p class="comment-card__author"><%- comment.author %></p>
+                <p class="comment-card__date"><%= moment(comment.date).format("MMM Do YY") %></p>
+                <p class="comment-card__body"><%- comment.body %></p>
+              </article>
+            </li>
           <% }) %>
         </ul>
       <% } else { %>
