Updated tinymce config to include options for image classes, fixed issue with first comment not displaying with ajax if it is the first comment created

--- a/public/sass/posts/_view-post.scss
+++ b/public/sass/posts/_view-post.scss
@@ -54,3 +54,34 @@ p.pipeline__percent {
 .pipeline__text {
   @extend %two-thirds--xs;
 }
+
+//image styles for upload images
+
+.post {
+  figcaption {
+    @extend %text--small;
+    padding: 8px;
+    font-weight: 500;
+    background-color: $color-light;
+    color: $color-dark;
+    font-style: italic;
+    position: relative;
+    top: -30px;
+  }
+
+  .editor-output__image {
+    @extend .img-responsive;
+    margin: 30px 0;
+  }
+}
+
+.mce-content-body  {
+  figcaption {
+    @extend %text--small;
+    padding: 8px;
+    font-weight: 500;
+    background-color: $color-light;
+    color: $color-dark;
+    font-style: italic;
+  }
+}
