--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -9,6 +9,8 @@
   <script type="text/javascript" src="/js/sticky.js"></script>
   <!-- include floatLabel -->
   <script type="text/javascript" src="/js/float-label.js"></script>
+  <!-- include cleaning editor output for empty p tags -->
+  <script type="text/javascript" src="/js/cleanEditorOutput.js"></script>
   <!-- include comment-submit -->
   <script type="text/javascript" src="/js/comment-submit.js"></script>
   </body>
