--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -2,23 +2,24 @@
 <%# <a href="/posts/new">Create new post</a>%>
 <div class="container-fluid">
   <div class="row">
-    <div class="featured-section">
+    <section class="featured-section">
       <div class="featured-post-details">
-        <h2 class="featured-post__title"><%= mainPost.title %></h2>
+        <h1 class="featured-post__title"><span class="hidden">Latest newsletter edition</span><%= mainPost.title %></h1>
         <div class="featured-post__body"><%- mainPost.body.substring(0, 500) %>...</div>
-        <a class="featured-post__link" href="/posts/<%= mainPost._id %>" />Read more</a>
+        <a class="featured-post__link" href="/posts/<%= mainPost._id %>" />Read more <span class="hidden">from <%=mainPost.title%></span></a>
       </div>
-    </div>
-    <div class="list-section">
+    </section>
+    <section class="list-section">
+      <h2 class="list-section__title">Previous editions</h2>
       <% posts.forEach(function(post){ %>
         <a class="list-item__link" href="/posts/<%= post._id %>">
           <div class="list-item">
             <h3 class="list-item__title"><%= post.title %></h3>
-            <span class="list-item__more">Read more</span>
+            <span aria-hidden="true" class="list-item__more">Read more</span>
           </div>
         </a>
       <% }) %>
-    </div>
+    </section>
   </div>
 </div>
 
