--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -15,3 +15,5 @@
 @import "modules/modules";
 //import template partials
 @import "templates/templates";
+//import widget partials
+@import "widgets/widgets";
