--- a/views/partials/foot.ejs
+++ b/views/partials/foot.ejs
@@ -5,6 +5,12 @@
   <script src="https://cdn.tinymce.com/4/tinymce.min.js"></script>
   <!-- include tinymce config options -->
   <script type="text/javascript" src="/js/tinymceconfig.js"></script>
+  <!-- include moment.js which needs to be loaded before datetimepicker -->
+  <script type="text/javascript" src="/js/moment.min.js"></script>
+  <!-- include datetimepicker widget js -->
+  <script type="text/javascript" src="/js/bootstrap-datetimepicker.js"></script>
+  <!-- include config options for datetimepicker widget -->
+  <script type="text/javascript" src="/js/bootstrap-datetimepicker-config.js"></script>
   <!-- include makeSticky -->
   <script type="text/javascript" src="/js/sticky.js"></script>
   <!-- include floatLabel -->
@@ -13,5 +19,9 @@
   <script type="text/javascript" src="/js/cleanEditorOutput.js"></script>
   <!-- include comment-submit -->
   <script type="text/javascript" src="/js/comment-submit.js"></script>
+  <!-- include jquery validation -->
+  <script type="text/javascript" src="/js/jquery.validate.js"></script>
+  <!-- include jquery validation configuration for forms -->
+  <script type="text/javascript" src="/js/jquery-validate-config.js"></script>
   </body>
 </html>
