--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -28,7 +28,7 @@
           <li>
             <article class="comment-card">
               <p class="comment-card__author"><%- comment.author %></p>
-              <p class="comment-card__date"><%= moment(comment.date).format("MMM Do YY") %></p>
+              <p class="comment-card__date"><%= moment(comment.date).format("MMM Do YYYY") %></p>
               <p class="comment-card__body"><%- comment.body %></p>
             </article>
           </li>
