--- a/views/posts/edit.ejs
+++ b/views/posts/edit.ejs
@@ -3,11 +3,17 @@
     <form action="/posts/<%= post.id %>?_method=PUT" method="POST">
       <fieldset class="post-form">
         <legend class="hidden">Edit post</legend>
-          <label for="post-title">Issue date</label>
-          <input id='post-title' name='post[title]' type='text' value='<%= post.title %>' placeholder='Enter a title for the post'/>
-          <label for="post-body">Post body</label>
-          <textarea id='post-body' name='post[body]' placeholder='Get your Shakespeare on'><%= post.body %></textarea>
-          <button class="btn-primary">Update post</button>
+        <label for="post-title">Issue date</label>
+        <input id='post-title' name='post[title]' type='text' value='<%= post.title %>' placeholder='Enter a title for the post'/>
+        <label for="post-state">Post state</label>
+        <select id="post-state" name="post[state]">
+          <% stateOptions.forEach(function(stateOption){ %>
+            <option value="<%= stateOption.value %>" <%= (stateOption.value === post.state) ? "selected" : "" %> <%= (stateOption.value === "") ? "disabled" : "" %>><%= stateOption.option %></option>
+          <% }) %>
+        </select>
+        <label for="post-body">Post body</label>
+        <textarea id='post-body' name='post[body]' placeholder='Get your Shakespeare on'><%= post.body %></textarea>
+        <button class="btn-primary">Update post</button>
       </fieldset>
     </form>
   </section>
