--- a/views/posts/new.ejs
+++ b/views/posts/new.ejs
@@ -5,6 +5,12 @@
         <legend class="hidden">Create newsletter post</legend>
         <label for="post-title">Issue date</label>
         <input id='post-title' name='post[title]' type='text' placeholder='Enter the issue date for the post'/>
+        <label for="post-state">Post state</label>
+        <select id="post-state" name="post[state]">
+          <% stateOptions.forEach(function(stateOption){ %>
+            <option value="<%= stateOption.value %>" <%= (stateOption.value === "") ? "disabled" : "" %>><%= stateOption.option %></option>
+          <% }) %>
+        </select>
         <label for="post-body">Post body</label>
         <textarea id='post-body' name='post[body]' placeholder='Get your Shakespeare on'></textarea>
         <button class="btn-primary">Create post</button>
