New js file to handle post header transitions on scroll

--- a/public/src/sass/base/_colours.scss
+++ b/public/src/sass/base/_colours.scss
@@ -1,8 +1,21 @@
+//base colours
 $color-black: black;
 $color-dark: rgb(39, 39, 38);
 $color-light: rgb(204, 204, 197);
 $color-light-b: #fafafa;
 $color-white: white;
 $color-error: #D32F2F;
+
+//brand colours
+$color-brand-pink: #C2527A;
+$color-brand-red: #C12D07;
+$color-brand-yellow: #E89923;
+$color-brand-orange: #DC6C1A;
+$color-brand-tangerine: #C83F11;
+$color-brand-deep-red: #902714;
+$color-brand-brown: #923815;
+
+
+//accent colours
 
 $color-accent: #3D2C2E;
