--- a/public/src/sass/posts/_post-header.scss
+++ b/public/src/sass/posts/_post-header.scss
@@ -1,5 +1,5 @@
 .post-header {
-  background: linear-gradient(90deg, $color-brand-orange,$color-brand-tangerine,$color-brand-deep-red);
+  background: linear-gradient(60deg, $color-brand-yellow,$color-brand-orange, $color-brand-tangerine);
   height: 60vh;
   opacity: 1;
   transition: all 0.1s;
@@ -11,63 +11,29 @@
   padding-top: 12px;
 }
 
-.post-header__date-wrapper {
-  position: fixed;
-  width: 100%;
-  padding-bottom: 12px;
-  transition: all 0.2s ease-in-out;
-  @media (min-width: 992px) {
-    padding-bottom: 18px;
-  }
-}
-
-.is-fixed {
-  position: fixed;
+.post-header__fade-wrapper {
+  position: absolute;
   top: 0;
   left: 0;
-  z-index: 99;
-  background-color: $color-accent;
-  color: $color-dark;
-  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  height: 60vh;
+  width: 100%;
+  background-color: rgba($color-black, 1);
+  opacity: 0;
 }
 
 .post-header__title {
   @extend %featured-heading;
-  color: $color-white;
+  color: white;
   margin: 0;
   position: relative;
-  top: 100px;
+  top: 150px;
   opacity: 1;
+  text-shadow: 0 0 0 rgba($color-white, 1);
 }
 
-.post-header__date {
-  color: white;
-  margin: 15px 0 0 0;
-  @extend %sub-heading;
-  font-weight: 400;
-  text-transform: uppercase;
-  border: 2px solid $color-white;
-  padding: 24px;
-  display: inline-block;
-  position: relative;
-  // transition: all 0.2s ease-in-out;
-  @media (min-width: 992px) {
-    margin: 15px 0 0 0;
-  }
-}
-
-.highlight {
-  position: relative;
-  display: inline;
-  background: $color-light;
-  color: $color-dark;
-  padding: 0.5rem;
-  left: 0.5rem;
-  padding-left: 0;
-  box-shadow: 0.5rem 0 0 $color-light, 0.5rem*-1 0 0 $color-light;
-  @media (min-width: 992px) {
-    padding: 0;
-    left: 1rem;
-    box-shadow: 1rem 0 0 $color-light, 1rem*-1 0 0 $color-light;
-  }
+.post-header__image {
+  position: fixed;
+  right: 0;
+  width: 40%;
+  opacity: 0.2;
 }
