--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Customer newsletter</title>
     <link rel='stylesheet' type='text/css' href='/dist/css/main.css' />
-    <link href='https://fonts.googleapis.com/css?family=Raleway:400,100,100italic,200,200italic,300,300italic,400italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Hind+Guntur:300,400,500,600,700" rel="stylesheet">
   </head>
   <body>
+    <% include navigation %>
     <% include aria-notifications-block %>
