--- a/public/src/sass/posts/_view-post.scss
+++ b/public/src/sass/posts/_view-post.scss
@@ -62,7 +62,7 @@ p.pipeline__percent {
     @extend %text--small;
     padding: 8px;
     font-weight: 500;
-    background-color: $color-light;
+    background-color: $color-light-b;
     color: $color-dark;
     font-style: italic;
     position: relative;
