--- a/public/src/sass/base/_typography.scss
+++ b/public/src/sass/base/_typography.scss
@@ -41,6 +41,7 @@ body {
 %text {
   font-size: 1.5rem;
   font-weight: 500;
+  line-height: 1.5;
   @media (min-width: 992px){
     font-size: 1.8rem;
   }
@@ -64,7 +65,7 @@ body {
 %sub-header {
   @extend %sub-heading;
   text-transform: uppercase;
-  margin: 12px 0 18px 0;
+  margin: 48px 0 30px 0;
   padding: 6px 0;
   &:hover,
   &:focus {
