--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -4,9 +4,9 @@
   <div class="row">
     <section class="featured-section">
       <div class="featured-post-details">
-        <h1 class="featured-post__title"><span class="hidden">Latest newsletter edition</span><%= mainPost.title %></h1>
-        <div class="featured-post__body"><%- mainPost.body.substring(0, 500) %>...</div>
-        <a class="featured-post__link" href="/posts/<%= mainPost._id %>" />Read more <span class="hidden">from <%=mainPost.title%></span></a>
+        <h1 class="featured-post__title"><span class="hidden">Latest newsletter edition</span><%= mainPost.content.title %></h1>
+        <div class="featured-post__body"><%- mainPost.content.body.substring(0, 500) %>...</div>
+        <a class="featured-post__link" href="/posts/<%= mainPost._id %>" />Read more <span class="hidden">from <%=mainPost.content.title%></span></a>
       </div>
     </section>
     <section class="list-section">
@@ -14,7 +14,7 @@
       <% posts.forEach(function(post){ %>
         <a class="list-item__link" href="/posts/<%= post._id %>">
           <div class="list-item">
-            <h3 class="list-item__title"><%= post.title %></h3>
+            <h3 class="list-item__title"><%= post.content.title %></h3>
             <span aria-hidden="true" class="list-item__more">Read more</span>
           </div>
         </a>
